# scikit-build-core-pytorch-extension-cpp

./: CMakeLists.txt  README.md  main.py  pyproject.toml  pyproject.toml.txt  setup.py  test_extension.py
extension_cpp/: __init__.py  ops.py
